[package]
name = "acme-dns-hetzner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
envy = "0.4.2"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
